[package]
name = "swim_server"
version = "0.1.0"
authors = ["Swim.AI developers info@swim.ai"]
edition = "2018"

[features]
default = []
debug = ["log_verbose"]
log_verbose = []
trust-dns = ["trust-dns-resolver"]

[target.'cfg(log_verbose)'.dependencies]
tracing = { version = "0.1.13", features = ["max_level_debug"] }

[target.'cfg(not(log_verbose))'.dependencies]
tracing = "0.1.16"

[dependencies]
either = "1.5.3"
futures = "0.3.4"
futures-util = "0.3.4"
http = "0.2.3"
im = "15.0.0"
parking_lot = "0.11.0"
pin-project = "1.0.5"
pin-utils = "0.1.0"
tokio = { version = "1.1.1", features = ["rt", "net"] }
tokio-stream = "0.1.2"
url = "2.1.1"
swim_common = { path = "../swim_common", features = ["tls"] }
swim_warp = { path = "../swim_warp" }
utilities = { path = "../utilities" }
swim_runtime = { path = "../swim_runtime" }
stm = { path = "../stm" }
tracing-futures = "0.2.4"
agent_derive = { path = "agent_derive" }
trybuild = "1.0.17"
tokio-tungstenite = { version = "0.13.0", git = "https://github.com/swimos/tokio-tungstenite/", branch = "deflate-v13", features = ["tls", "deflate"] }
tokio-native-tls = "0.3"
trust-dns-resolver = { version = "0.20", optional = true, features = ["tokio-runtime"] }
auth = { path = "auth" }
regex = "1"
lazy_static = "1.4.0"
percent-encoding = "2.1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.1.1", features = ["rt-multi-thread", "macros", "test-util"] }
tracing = "0.1.16"
tokio-test = "0.4.0"
