[package]
name = "swim_server"
version = "0.1.0"
authors = ["Swim Inc. developers info@swim.ai"]
edition = "2021"

[features]
default = []
debug = ["log_verbose"]
persistence = ["server_store/rocks"]
log_verbose = []

[target.'cfg(log_verbose)'.dependencies]
tracing = { version = "0.1.13", features = ["max_level_debug"] }

[target.'cfg(not(log_verbose))'.dependencies]
tracing = "0.1.16"

[dependencies]
ratchet = { package = "ratchet_rs", version = "0.1.0", features = ["deflate", "split"] }
swim_store = { path = "../swim_store" }
swim_client = { path = "../swim_client" }
swim_metrics = { path = "swim_metrics" }
swim_warp = { path = "../swim_warp" }
swim_utilities = { path = "../swim_utilities", features = ["errors", "sync", "time", "text", "io", "algebra"] }
stm = { path = "../stm" }
either = "1.5.3"
futures = "0.3.4"
futures-util = "0.3.4"
http = "0.2.3"
im = "15.0.0"
parking_lot = "0.11.0"
pin-project = "1.0.5"
pin-utils = "0.1.0"
tokio = { version = "1.1.1", features = ["rt", "net"] }
tokio-stream = { version = "0.1.2", features = ["sync"] }
url = "2.1.1"
swim_runtime = { path = "../runtime/swim_runtime" }
swim_model = { path = "../api/swim_model" }
swim_form = { path = "../api/swim_form" }
swim_recon = { path = "../api/formats/swim_recon" }
swim_schema = { path = "../api/swim_schema" }
swim_tracing = { path = "../swim_utilities/swim_tracing", features = ["future"] }
stringify_attr = { path = "../macro_utilities/stringify_attr" }
swim_async_runtime = { path = "../runtime/swim_async_runtime" }
tracing-futures = "0.2.4"
agent_derive = { path = "agent_derive" }
trybuild = "1.0.48"
tokio-native-tls = "0.3"
trust-dns-resolver = { version = "0.20", optional = true, features = ["tokio-runtime"] }
regex = "1"
lazy_static = "1.4.0"
percent-encoding = "2.1.0"
thiserror = "1.0"
crossbeam-queue = "0.3"
server_store = { path = "server_store"}
serde = { version = "1.0.124", features = ["derive", "rc"] }
bincode = "1.3.2"
rocksdb = "0.16.0"
tempdir = "0.3.7"

[dev-dependencies]
ratchet_fixture = "0.1.0"
tokio = { version = "1.1.1", features = ["rt-multi-thread", "macros", "test-util"] }
tracing = "0.1.16"
tokio-test = "0.4.0"
