[package]
name = "swim_utilities"
version = "0.1.0"
authors = ["Swim Inc. developers info@swim.ai"]
edition = "2021"

[features]
default = []
all = ["future", "errors", "sync", "collections", "time", "text", "rtree", "buf_channel", "algebra", "multi_reader"]
algebra = ["swim_algebra"]
buf_channel = ["byte_channel"]
multi_reader = ["swim_multi_reader"]
collections = ["rtree"]
errors = ["swim_errors"]
future = ["swim_future"]
io = ["buf_channel", "swim_io"]
rtree = ["swim_rtree"]
sync = ["future", "trigger", "swim_sync"]
text = ["swim_route", "swim_format"]
time = ["swim_time"]
trigger = ["swim_trigger"]

[dependencies]
byte_channel = { path = "./byte_channel", optional = true }
swim_multi_reader = { path = "./swim_multi_reader", optional = true }
swim_algebra = { path = "./swim_algebra", optional = true }
swim_errors = { path = "./swim_errors", optional = true }
swim_format = { path = "./swim_format", optional = true }
swim_trigger = { path = "./swim_trigger", optional = true }
swim_future = { path = "./swim_future", optional = true }
swim_io = { path = "./swim_io", optional = true }
swim_route = { path = "./swim_route", optional = true }
swim_rtree = { path = "./swim_rtree", optional = true }
swim_sync = { path = "./swim_sync", optional = true }
swim_time = { path = "./swim_time", optional = true }
