[package]
name = "swim_warp"
version = "0.1.0"
authors = ["Swim Inc. developers info@swim.ai"]
edition = "2021"

[dependencies]
swim_model = { path = "../api/swim_model" }
swim_form = { path = "../api/swim_form" }
swim_schema = { path = "../api/swim_schema" }
swim_utilities = { path = "../swim_utilities" }
swim_recon = { path = "../api/formats/swim_recon" }
thiserror = "1.0"
smallvec = "1.7.0"

[dev-dependencies]

