[package]
name = "swim_wasm"
version = "0.1.0"
authors = ["Swim.AI developers info@swim.ai"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.21", features = ["sync", "stream", "macros"] }
web-sys = { version = "0.3.39", features = ["WebSocket", "ErrorEvent"] }
wasm-bindgen-futures = "0.4.13"
ws_stream_wasm = "0.6.0"
wasm-bindgen = "0.2.63"
futures = "0.3.4"
futures-util = "0.3.4"
pin-utils = "0.1.0"
pin-project = "0.4.8"
url = "2.1.1"

common = { path = "../common" }
utilities = { path = "../utilities" }