[package]
name = "swim_wasm"
version = "0.1.0"
authors = ["Swim.AI developers info@swim.ai"]
edition = "2018"

[dependencies]
tokio = { version = "0.3.3", features = ["sync", "stream", "macros"] }
web-sys = { version = "0.3.41", features = ["WebSocket", "ErrorEvent"] }
wasm-bindgen-futures = "0.4.14"
ws_stream_wasm = "0.6.0"
wasm-bindgen = "0.2.64"
futures = "0.3.4"
futures-util = "0.3.4"
pin-utils = "0.1.0"
pin-project = "0.4.8"
url = "2.1.1"

swim_common = { path = "../swim_common", default-features = false }
utilities = { path = "../utilities" }