[package]
name = "swimos"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "SwimOS"
license.workspace = true
repository = "https://github.com/swimos/swim-rust/tree/main/swimos"
homepage.workspace = true

[features]
default = ["aws_lc_rs_provider"]
all = ["server", "agent", "json"]
server = ["dep:swimos_server_app", "dep:swimos_remote"]
agent = ["dep:swimos_agent", "dep:swimos_agent_derive"]
json = ["agent", "swimos_agent/json"]
ring_provider = ["swimos_server_app/ring_provider"]
aws_lc_rs_provider = ["swimos_server_app/aws_lc_rs_provider"]

[dependencies]
swimos_utilities = { workspace = true, features = ["io", "text"] }
swimos_api = { workspace = true }
swimos_model = { workspace = true }
swimos_recon = { workspace = true }
swimos_server_app = { workspace = true, optional = true, features = ["signal"] }
swimos_agent = { workspace = true, optional = true }
swimos_agent_derive = { workspace = true, optional = true }
swimos_remote = { workspace = true, optional = true }
swimos_form = { workspace = true }

[dev-dependencies]
parking_lot = { workspace = true }
futures = { workspace = true }
trybuild = { workspace = true }
