[package]
name = "swimos_client"
version = "0.1.0"
edition = "2021"
description = "SwimOS Client"
license = "Apache-2.0"
repository = "https://github.com/swimos/swim-rust/"

[features]
default = ["aws_lc_rs_provider"]
deflate = ["ratchet/deflate"]
trust_dns = ["swimos_runtime/trust_dns"]
ring_provider = ["swimos_remote/ring_provider"]
aws_lc_rs_provider = ["swimos_remote/aws_lc_rs_provider"]

[dependencies]
swimos_agent_protocol = { path = "../api/swimos_agent_protocol", version = "0.1.0" }
swimos_recon = { path = "../api/formats/swimos_recon", version = "0.1.0" }
swimos_messages = { path = "../runtime/swimos_messages", version = "0.1.0" }
swimos_utilities = { path = "../swimos_utilities", features = ["trigger"], version = "0.1.0" }
swimos_downlink = { path = "../swimos_downlink", version = "0.1.0" }
swimos_api = { path = "../api/swimos_api", version = "0.1.0" }
swimos_client_api = { path = "../api/swimos_client_api", version = "0.1.0" }
swimos_model = { path = "../api/swimos_model", version = "0.1.0" }
swimos_form = { path = "../api/swimos_form", version = "0.1.0" }
swimos_runtime = { path = "../runtime/swimos_runtime", version = "0.1.0" }
swimos_remote = { path = "../runtime/swimos_remote", version = "0.1.0", features = ["tls"] }
ratchet = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
fnv = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["io-util", "sync"] }
tokio-util = { workspace = true, features = ["codec"] }
thiserror = { workspace = true }
rustls = { workspace = true }
