[package]
name = "swimos_downlink"
version = "0.1.0"
authors = ["Swim Inc. developers info@swim.ai"]
edition = "2021"

[dependencies]
futures = { workspace = true }
swimos_utilities = { path = "../swimos_utilities", features = ["io", "trigger"] }
swimos_model = { path = "../api/swimos_model" }
swimos_form = { path = "../api/swimos_form" }
swimos_recon = { path = "../api/formats/swimos_recon" }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
swimos_api = { path = "../api/swimos_api" }
swimos_agent_protocol = { path = "../api/swimos_agent_protocol" }
tokio-stream = { workspace = true }
tracing = { workspace = true }
either = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
swimos_recon = { path = "../api/formats/swimos_recon", features = ["async_parser"] }
tokio = { workspace = true, features = ["rt", "macros"] }
