[package]
name = "swimos_downlink"
version = "0.1.0"
authors = ["Swim Inc. developers info@swim.ai"]
edition = "2021"
description = "SwimOS Downlink Runtime"
license = "Apache-2.0"
repository = "https://github.com/swimos/swim-rust/"

[dependencies]
futures = { workspace = true }
swimos_utilities = { path = "../swimos_utilities", features = ["io", "trigger"], version = "0.1.0" }
swimos_model = { path = "../api/swimos_model", version = "0.1.0" }
swimos_form = { path = "../api/swimos_form", version = "0.1.0" }
swimos_recon = { path = "../api/formats/swimos_recon", version = "0.1.0" }
bytes = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tokio-util = { workspace = true, features = ["codec"] }
swimos_api = { path = "../api/swimos_api", version = "0.1.0" }
swimos_client_api = { path = "../api/swimos_client_api", version = "0.1.0" }
swimos_agent_protocol = { path = "../api/swimos_agent_protocol", version = "0.1.0" }
tokio-stream = { workspace = true }
tracing = { workspace = true }
either = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
swimos_recon = { path = "../api/formats/swimos_recon" }
tokio = { workspace = true, features = ["rt", "macros"] }
