[package]
name = "swimos_downlink"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "SwimOS Downlink Runtime"
license.workspace = true
repository = "https://github.com/swimos/swim-rust/tree/main/swimos_downlink"
homepage.workspace = true

[dependencies]
futures = { workspace = true }
swimos_utilities = { workspace = true, features = ["io", "trigger"] }
swimos_model = { workspace = true }
swimos_form = { workspace = true }
swimos_recon = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tokio-util = { workspace = true, features = ["codec"] }
swimos_api = { workspace = true }
swimos_client_api = { workspace = true }
swimos_agent_protocol = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
either = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
swimos_recon = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
