[package]
name = "swimos_macro_utilities"
version = "0.1.0"
authors = ["Swim Inc. developers info@swim.ai"]
edition = "2021"
description = "SwimOS macro utilites"
license = "Apache-2.0"

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["printing", "visit", "visit-mut", "parsing", "extra-traits"] }
quote = { workspace = true }
convert_case = { workspace = true }
thiserror = { workspace = true }
frunk = { workspace = true }