[package]
name = "swimos_utilities"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "SwimOS Time Utilities"
license.workspace = true
repository = "https://github.com/swimos/swim-rust/tree/main/swimos_utilities"
homepage.workspace = true

[features]
default = []
all = ["future", "errors", "circular_buffer", "collections", "time", "text", "rtree", "buf_channel", "algebra", "multi_reader", "encoding"]
algebra = ["swimos_algebra"]
buf_channel = ["swimos_byte_channel"]
multi_reader = ["swimos_multi_reader"]
collections = ["rtree"]
errors = ["swimos_errors"]
future = ["swimos_future"]
io = ["buf_channel", "swimos_fs"]
rtree = ["swimos_rtree"]
circular_buffer = ["swimos_sync"]
sync = ["future", "trigger", "circular_buffer"]
text = ["swimos_route", "swimos_format"]
time = ["swimos_time"]
trigger = ["swimos_trigger"]
encoding = ["swimos_encoding"]

[dependencies]
swimos_byte_channel = { workspace = true, optional = true }
swimos_multi_reader = { workspace = true, optional = true }
swimos_algebra = { workspace = true, optional = true }
swimos_num = { workspace = true }
swimos_errors = { workspace = true, optional = true }
swimos_format = { workspace = true, optional = true }
swimos_trigger = { workspace = true, optional = true }
swimos_future = { workspace = true, optional = true }
swimos_fs = { workspace = true, optional = true }
swimos_route = { workspace = true, optional = true }
swimos_rtree = { workspace = true, optional = true }
swimos_sync = { workspace = true, optional = true }
swimos_time = { workspace = true, optional = true }
swimos_encoding = { workspace = true, optional = true }

