[package]
name = "utilities"
version = "0.1.0"
authors = ["Swim.AI developers info@swim.ai"]
edition = "2018"

[dependencies]
crossbeam-queue = "0.3"
futures = "0.3.4"
futures-util = "0.3.4"
http = "0.2.3"
parking_lot = "0.11.0"
percent-encoding = "2.1.0"
pin-utils = "0.1.0"
parking_lot_core = "0.8.0"
pin-project = "1.0.5"
rand = "0.7.3"
tracing = "0.1.16"
tracing-subscriber = "0.2.11"
tokio = { version = "1.1.1", features = ["sync", "rt"] }
swim_runtime = { path = "../swim_runtime" }
slab = "0.4.2"
macro_helpers = { path = "macro_helpers" }
stringify_attr = { path = "stringify_attr" }
url = "2.1.1"
num = "0.3.0"

[dev-dependencies]
test_util = { path = "test_util" }
tokio = { version = "1.1.1", features = [ "rt-multi-thread", "macros"] }
tokio-stream = "0.1.2"
