[package]
name = "swim_api"
version = "0.1.0"
authors = ["Swim Inc. developers info@swim.ai"]
edition = "2021"

[dependencies]
futures = { workspace = true }
swim_utilities = { path = "../../swim_utilities", features = ["io", "trigger"] }
swim_model = { path = "../swim_model" }
swim_form = { path = "../swim_form" }
swim_recon = { path = "../../api/formats/swim_recon", features = ["async_parser"] }
thiserror = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
static_assertions = { workspace = true }
uuid = { workspace = true }
