[package]
name = "swim_api"
version = "0.1.0"
authors = ["Swim Inc. developers info@swim.ai"]
edition = "2021"

[features]
default = []
log_api = ["swim_model/time"]

[dependencies]
futures = { workspace = true }
swim_utilities = { path = "../../swim_utilities", features = ["io", "trigger", "errors"] }
swim_model = { path = "../swim_model" }
swim_protocol = { path = "../swim_protocol" }
swim_form = { path = "../swim_form", features = ["futures"] }
swim_recon = { path = "../../api/formats/swim_recon", features = ["async_parser"] }
thiserror = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
static_assertions = { workspace = true }
uuid = { workspace = true }
http = { workspace = true }
url = { workspace = true }
